--- a/index.html
+++ b/index.html
@@ -11,24 +11,39 @@
             flex-direction: column;
             align-items: center;
             padding: 20px;
+            background-color: #f0f0f0;
         }
 
         nav {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
+            flex-wrap: wrap;
         }
 
         nav button {
-            margin: 0 10px;
+            margin: 10px;
             padding: 10px 20px;
             cursor: pointer;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        nav button:hover {
+            background-color: #0056b3;
         }
 
         section#planner {
             text-align: center;
             width: 100%;
-            max-width: 600px;
+            max-width: 800px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
         .hidden {
@@ -41,6 +56,88 @@
 
         .login-form input {
             margin-right: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .login-form button {
+            padding: 10px 20px;
+            cursor: pointer;
+            border: none;
+            background-color: #28a745;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .login-form button:hover {
+            background-color: #218838;
+        }
+
+        .logout button {
+            padding: 10px 20px;
+            cursor: pointer;
+            border: none;
+            background-color: #dc3545;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .logout button:hover {
+            background-color: #c82333;
+        }
+
+        .script-section {
+            margin-top: 20px;
+        }
+
+        .script-section textarea {
+            width: 100%;
+            height: 200px;
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .script-options {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .script-options select, .script-options button {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .script-options button {
+            background-color: #007BFF;
+            color: white;
+            transition: background-color 0.3s;
+        }
+
+        .script-options button:hover {
+            background-color: #0056b3;
+        }
+
+        .saved-scripts {
+            margin-top: 20px;
+        }
+
+        .saved-scripts ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .saved-scripts li {
+            background: #e9ecef;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
         }
 
         @media (max-width: 600px) {
@@ -70,6 +167,9 @@
         <button onclick="showPlatform('facebook')">Facebook</button>
         <button onclick="showPlatform('twitter')">Twitter</button>
         <button onclick="showPlatform('instagram')">Instagram</button>
+        <button onclick="showPlatform('youtube')">YouTube</button>
+        <button onclick="showPlatform('tiktok')">TikTok</button>
+        <button onclick="showScripts()">View Saved Scripts</button>
     </nav>
 
     <section id="planner">
@@ -122,22 +222,81 @@
                 case 'facebook':
                     content = `
                         <h1>Facebook Planner</h1>
-                        <textarea id="facebook-post" placeholder="Write your Facebook post here..."></textarea>
-                        <button onclick="savePost('facebook')">Save Post</button>
+                        <div class="script-section">
+                            <textarea id="facebook-post" placeholder="Write your Facebook post here..."></textarea>
+                            <div class="script-options">
+                                <select id="facebook-script-type">
+                                    <option value="scene">Scene</option>
+                                    <option value="narrator">Narrator</option>
+                                    <option value="dialogue">Dialogue</option>
+                                </select>
+                                <button onclick="savePost('facebook')">Save Post</button>
+                            </div>
+                        </div>
                     `;
                     break;
                 case 'twitter':
                     content = `
                         <h1>Twitter Planner</h1>
-                        <textarea id="twitter-post" placeholder="Write your Twitter post here..."></textarea>
-                        <button onclick="savePost('twitter')">Save Post</button>
+                        <div class="script-section">
+                            <textarea id="twitter-post" placeholder="Write your Twitter post here..."></textarea>
+                            <div class="script-options">
+                                <select id="twitter-script-type">
+                                    <option value="scene">Scene</option>
+                                    <option value="narrator">Narrator</option>
+                                    <option value="dialogue">Dialogue</option>
+                                </select>
+                                <button onclick="savePost('twitter')">Save Post</button>
+                            </div>
+                        </div>
                     `;
                     break;
                 case 'instagram':
                     content = `
                         <h1>Instagram Planner</h1>
-                        <textarea id="instagram-post" placeholder="Write your Instagram post here..."></textarea>
-                        <button onclick="savePost('instagram')">Save Post</button>
+                        <div class="script-section">
+                            <textarea id="instagram-post" placeholder="Write your Instagram post here..."></textarea>
+                            <div class="script-options">
+                                <select id="instagram-script-type">
+                                    <option value="scene">Scene</option>
+                                    <option value="narrator">Narrator</option>
+                                    <option value="dialogue">Dialogue</option>
+                                </select>
+                                <button onclick="savePost('instagram')">Save Post</button>
+                            </div>
+                        </div>
+                    `;
+                    break;
+                case 'youtube':
+                    content = `
+                        <h1>YouTube Planner</h1>
+                        <div class="script-section">
+                            <textarea id="youtube-post" placeholder="Write your YouTube script here..."></textarea>
+                            <div class="script-options">
+                                <select id="youtube-script-type">
+                                    <option value="scene">Scene</option>
+                                    <option value="narrator">Narrator</option>
+                                    <option value="dialogue">Dialogue</option>
+                                </select>
+                                <button onclick="savePost('youtube')">Save Post</button>
+                            </div>
+                        </div>
+                    `;
+                    break;
+                case 'tiktok':
+                    content = `
+                        <h1>TikTok Planner</h1>
+                        <div class="script-section">
+                            <textarea id="tiktok-post" placeholder="Write your TikTok script here..."></textarea>
+                            <div class="script-options">
+                                <select id="tiktok-script-type">
+                                    <option value="scene">Scene</option>
+                                    <option value="narrator">Narrator</option>
+                                    <option value="dialogue">Dialogue</option>
+                                </select>
+                                <button onclick="savePost('tiktok')">Save Post</button>
+                            </div>
+                        </div>
                     `;
                     break;
                 default:
@@ -149,8 +308,22 @@
 
         function savePost(platform) {
             const postContent = document.getElementById(`${platform}-post`).value;
-            localStorage.setItem(`${platform}-post`, postContent);
+            const scriptType = document.getElementById(`${platform}-script-type`).value;
+            const savedScripts = JSON.parse(localStorage.getItem('savedScripts')) || [];
+            savedScripts.push({ platform, postContent, scriptType });
+            localStorage.setItem('savedScripts', JSON.stringify(savedScripts));
             alert('Post saved successfully!');
+        }
+
+        function showScripts() {
+            const savedScripts = JSON.parse(localStorage.getItem('savedScripts')) || [];
+            let content = '<h1>Saved Scripts</h1><div class="saved-scripts"><ul>';
+            savedScripts.forEach(script => {
+                content += `<li><strong>${script.platform}:</strong> [${script.scriptType}] ${script.postContent}</li>`;
+            });
+            content += '</ul></div>';
+            document.getElementById('planner').innerHTML = content;
+            localStorage.setItem('plannerData', content);
         }
     </script>
 </body>
