--- a/index.html
+++ b/index.html
@@ -233,6 +233,35 @@
             word-wrap: break-word;
         }
 
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f1f1f1;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
         @media (max-width: 600px) {
             nav {
                 flex-direction: column;
@@ -387,6 +416,7 @@
             const savedScripts = JSON.parse(localStorage.getItem('savedScripts')) || [];
             savedScripts.push({ platform, scriptList });
             localStorage.setItem('savedScripts', JSON.stringify(savedScripts));
+            document.getElementById(`${platform}-script-list`).innerHTML = '';
             alert('Post saved successfully!');
         }
 
@@ -394,7 +424,16 @@
             const savedScripts = JSON.parse(localStorage.getItem('savedScripts')) || [];
             let content = '<h1>Saved Scripts</h1><div class="saved-scripts"><ul>';
             savedScripts.forEach((script, index) => {
-                content += `<li><strong>${script.platform}:</strong> ${script.scriptList} <button onclick="deleteSavedScript(${index})">Delete</button></li>`;
+                content += `<li>
+                    <div class="dropdown">
+                        <button class="dropbtn"><strong>${script.platform}</strong></button>
+                        <div class="dropdown-content">
+                            <a href="#" onclick="editScript(${index})">Edit</a>
+                            <a href="#" onclick="deleteSavedScript(${index})">Delete</a>
+                        </div>
+                    </div>
+                    <div>${script.scriptList}</div>
+                </li>`;
             });
             content += '</ul></div>';
             document.getElementById('planner').innerHTML = content;
@@ -406,6 +445,14 @@
             savedScripts.splice(index, 1);
             localStorage.setItem('savedScripts', JSON.stringify(savedScripts));
             showScripts();
+        }
+
+        function editScript(index) {
+            const savedScripts = JSON.parse(localStorage.getItem('savedScripts')) || [];
+            const script = savedScripts[index];
+            localStorage.setItem(`${script.platform}-temporary-script`, script.scriptList);
+            showPlatform(script.platform);
+            deleteSavedScript(index);
         }
 
         function capitalize(str) {
