--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
             display: none;
         }
 
-        .login-form, .logout {
+        .login-form, .register-form, .logout {
             margin-bottom: 20px;
         }
 
-        .login-form input {
+        .login-form input, .register-form input {
             margin-right: 10px;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
 
-        .login-form button {
+        .login-form button, .register-form button {
             padding: 10px 20px;
             cursor: pointer;
             border: none;
@@ -71,7 +71,7 @@
             transition: background-color 0.3s;
         }
 
-        .login-form button:hover {
+        .login-form button:hover, .register-form button:hover {
             background-color: #218838;
         }
 
@@ -276,13 +276,27 @@
                 margin-bottom: 10px;
             }
         }
+
+        .platform-logo {
+            height: 20px;
+            vertical-align: middle;
+            margin-right: 5px;
+        }
     </style>
 </head>
 <body>
-    <div class="login-form" id="login-form">
+    <div class="register-form" id="register-form">
+        <input type="text" id="reg-username" placeholder="Username">
+        <input type="password" id="reg-password" placeholder="Password">
+        <button onclick="register()">Register</button>
+        <button onclick="showLoginForm()">Already have an account? Login</button>
+    </div>
+
+    <div class="login-form hidden" id="login-form">
         <input type="text" id="username" placeholder="Username">
         <input type="password" id="password" placeholder="Password">
         <button onclick="login()">Login</button>
+        <button onclick="showRegisterForm()">Don't have an account? Register</button>
     </div>
 
     <div class="logout hidden" id="logout">
@@ -291,7 +305,7 @@
     </div>
 
     <nav id="nav" class="hidden">
-        <button onclick="showPlatform('facebook')">Facebook</button>
+        <button onclick="showPlatform('facebook')"><img src="https://github.com/SSspicyTaco/SSspicyTaco.github.io/raw/main/9be7a031fcd2215a8827ae719d546182-removebg-preview.png" class="platform-logo">Facebook</button>
         <button onclick="showPlatform('twitter')">Twitter</button>
         <button onclick="showPlatform('instagram')">Instagram</button>
         <button onclick="showPlatform('youtube')">YouTube</button>
@@ -311,21 +325,44 @@
             }
         });
 
-        function login() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
+        function register() {
+            const username = document.getElementById('reg-username').value;
+            const password = document.getElementById('reg-password').value;
             if (username && password) {
-                localStorage.setItem('isLoggedIn', true);
                 localStorage.setItem('username', username);
-                showLoggedInView();
+                localStorage.setItem('password', password);
+                alert('Registration successful! Please log in.');
+                showLoginForm();
             } else {
                 alert('Please enter both username and password.');
             }
         }
 
+        function showRegisterForm() {
+            document.getElementById('login-form').classList.add('hidden');
+            document.getElementById('register-form').classList.remove('hidden');
+        }
+
+        function showLoginForm() {
+            document.getElementById('register-form').classList.add('hidden');
+            document.getElementById('login-form').classList.remove('hidden');
+        }
+
+        function login() {
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            const storedUsername = localStorage.getItem('username');
+            const storedPassword = localStorage.getItem('password');
+            if (username === storedUsername && password === storedPassword) {
+                localStorage.setItem('isLoggedIn', true);
+                showLoggedInView();
+            } else {
+                alert('Incorrect username or password.');
+            }
+        }
+
         function logout() {
             localStorage.removeItem('isLoggedIn');
-            localStorage.removeItem('username');
             document.getElementById('login-form').classList.remove('hidden');
             document.getElementById('logout').classList.add('hidden');
             document.getElementById('nav').classList.add('hidden');
@@ -336,6 +373,7 @@
             const username = localStorage.getItem('username');
             document.getElementById('welcome-message').innerText = `Welcome, ${username}`;
             document.getElementById('login-form').classList.add('hidden');
+            document.getElementById('register-form').classList.add('hidden');
             document.getElementById('logout').classList.remove('hidden');
             document.getElementById('nav').classList.remove('hidden');
             if (localStorage.getItem('plannerData')) {
